# blog

./: .gitignore  Dockerfile  Dockerfile.base  Makefile  blog.code-workspace  debian-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish_container.yml
notebooks/: Bayesian_exponential_model.html  cross_validation_distribution_constructor.ipynb  hyperopt_cross_validation.ipynb  sklearn_cost_function.ipynb  soft_max.ipynb  statistical_tests.ipynb
notebooks/Untitled Folder/: Untitled.ipynb
notebooks/bayesian_optimization/: hyperopt_xgbclassifier.ipynb
notebooks/cell_tower_coverage/: cell_tower_gcl.ipynb
notebooks/classification.time_series.xgboost/: Untitled.ipynb  requirements.txt
notebooks/competitive_opinions/: Untitled.ipynb  competitive_opinions.ipynb
notebooks/facility_location/: facility_location_gcl.ipynb
notebooks/gist.pandas.value_counts/: gist.pandas.value_counts.ipynb
notebooks/gists/: data_filters.ipynb  find_row_closest_value_to_input.ipynb  heatmap.ipynb  pandas_datime_resample.ipynb
notebooks/how_to_calculate_feature_importance_with_python/: how_to_calculate_feature_importance_with_python.ipynb
notebooks/marketing_campaign_optimizarion/: marketing_campaign_optimization_gcl.ipynb
notebooks/pareto_encoder/: pareto_encoder.ipynb
notebooks/plot_digraph/: plot_digraph.ipynb
notebooks/statistical_tests/: statistical_tests.ipynb  test_and_power.ipynb
notebooks/temp/: Untitled.ipynb
notebooks/wooliesx/: analysis.ipynb
posts/2021-11-28-blog-post_soft_maximum/: soft_max.ipynb
posts/2021-12-08-blog-post_mixed_integer_programming/: 2021-12-08-blog-post_mixed_integer_programming.ipynb  example.lp
posts/2021-12-31-blog-post_optimizing_marketing_campaigns_part_1/: 2021-12-31-blog-post_optimizing_marketing_campaigns_part_1.ipynb  tactical.lp
posts/2021-xx-xx-blog_post_soft_maximum/: soft_max.ipynb
src/: filter_dataset.py
tests/: mock.py
