[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4"
arviz = "^0.11.2"
awscli = "^1.19.109"
bokeh = "^2.3.3"
catboost = "^0.26"
category-encoders = "^2.2.2"
click = "^8.0.1"
dask = {extras = ["complete"], version = "^2021.7.0"}
dask-ml = {extras = ["complete"], version = "^1.9.0"}
Deprecated = "^1.2.13"
hyperopt = "^0.2.5"
lightgbm = "^3.2.1"
netgraph = "*"
networkx = "*"
pymc3 = "^3.11.2"
python-dotenv = "^0.18.0"
PyYAML = "^5.4.1"
scikit-learn = "*"
scikit-plot = "^0.3.7"
seaborn = "^0.11.1"
shap = "^0.39.0"
typeguard = "^2.12.1"
xgboost = "^1.4.2"
xkcd = "^2.4.2"
gurobipy = "^9.5.0"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"
ipykernel = "^6.0.1"
jupyter = "^1.0.0"
jupyterlab = "^3.0.16"
pycaret = {extras = ["full"], version = "^2.3.2"}
pytest = "^6.2.5"
rope = "^0.19.0"
watermark = "^2.2.0"
jupyterlab-git = "^0.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
