[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4"
arviz = "^0.11.2"
catboost = ">=1.1.1"
category-encoders = "^2.2.2"
click = "^8.0.1"
Deprecated = "^1.2.13"
lightgbm = "^3.2.1"
netgraph = "*"
networkx = "*"
pymc3 = "^3.11.2"
python-dotenv = ">=0.21.0"
scikit-learn = ">=1.2.0"
scikit-plot = "^0.3.7"
seaborn = ">=0.12.1"
shap = ">=0.41.0"
typeguard = "^2.12.1"
xgboost = "^1.4.2"
xkcd = "^2.4.2"
gurobipy = ">=10.0.0"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"
ipykernel = "^6.0.1"
jupyter = "^1.0.0"
jupyterlab = "^3.0.16"
pytest = ">=7.2.0"
rope = ">=1.5.1"
watermark = "^2.2.0"
jupyterlab-git = ">=0.40.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
